--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,8 @@ javafx {
 }
 
 dependencies {
-
+  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.4.2'
+  implementation("com.google.code.gson:gson:2.11.0")
   testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
   testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 }
